# cli_parser

./: .gitignore  README.md  pyproject.toml
cli_parser/: __init__.py  commands.py  exceptions.py  parser.py  utils.py
cli_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_cli_parser.py  test_commands.py
